# Customer-Support-Ticket-Routing-Environment.-

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
server/: app.py
